# packing_spectral

./: Cargo.toml  README.md
scripts/: angular_average  bin_sf_stealthy_2d  fast_average  fast_stddev  ge_to_donev  gen_poisson.py  scatter_plot.py  sf_angular_average  sf_angular_average_2d  sphere-packing-fast.py
src/: ellipsoid.rs  lib.rs  main.rs  sphere.rs
